--- a/Resume.html
+++ b/Resume.html
@@ -1,19 +1,146 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Resume</title>
-    <style>
-        table,th{
-            border:1px solid black;
-        }
-        h1
-        {
-          text-align: center;
-        }
-    </style>
-    
+    <title>Resume</title>
 </head>
 <body>
-    heloooo
+    <center>
+        <u><h1>RESUME</h1></u>
+    </center>
+    <!--i have to change this-->
+    <main class=""resume">
+    <!--header-->
+    <header>
+        <table style="width: 100%;">
+            <tr style="width: 100%">
+                <td style="width: 80%;">
+    <h2>Gajjela Anusha</h2>
+       <p>3-333/3,Jangaon,Kamaredy,<br>Hyderabad,Telangana-503125.</p>
+    </td>
+    <td style="width: 20%;">
+<img src="https://thumbs.dreamstime.com/b/passport-photo-serious-african-american-young-adult-woman-isolated-white-background-cut-out-239195383.jpg"
+     alt="resume_image" height="150" width="150">
+</td>
+</tr>
+</table>
+</header>
+<hr>
+<!--Career Objective-->
+<div class=" Career Objective">
+    <u><h3>Career Objective</h3></u>
+<p>To secure a position as a public relations/marketing professional in order to utilize my administrative, marketing, and interpersonal skills with accuracy and efficiency while maintaining a motivated, productive, and goal oriented environment for the entire professional team on board while maintaining extensive customer loyalty.</p>
+</div>
+<!--Educational Qualifications-->
+<div class="Education">
+    <u><h3>Education Qualifications:</h3></u>
+    <style>
+        table, th, td{
+            border: 1px  solid black;
+        }
+        table{
+            border-collapse: collapse;
+        }
+        th,td{
+            padding: 5px;
+        }
+    </style>
+    <table style="width: 100%">
+    <tr>
+        <th>Qualification</th>
+        <th>Institution</th>
+        <th>University/Board</th>
+        <th>Percentage</th>
+        <th>year of passing</th>
+    </tr>
+    <tr>
+        <td>BSC Degree</td>
+        <td>University College For Womens,Hyderabad</td>
+        <td>Osmania University</td>
+        <td>91%</td>
+        <td>2023</td>
+    </tr>
+    <tr>
+        <td>Intermediate</td>
+        <td>New Kakatiya Jr College, Nizamabad</td>
+        <td>Board Of Intermediate Education</td>
+        <td>971</td>
+        <td>2020</td>
+    </tr>
+    <tr>
+        <td>SSC</td>
+        <td>K.G.B.V High School, Domakonda</td>
+        <td>State Board Of Secondary Education</td>
+        <td>9.7</td>
+        <td>2018</td>
+    </tr>
+    </table>
+</div>
+<!--projects-->
+<div class="projects">
+    <u><h3>Projects:</h3></u>
+    <div>
+        <ol>
+        <li><h4>Interpolation and curve fitting using MATLAB</h4></li>
+        <P>Interpolation aims to estimate values between known data points, while curve fitting seeks to find a mathematical function that best represents the overall trend of the data.MATLAB provides various tools and functions for both tasks, allowing for efficient analysis and visualization of results.This project will implement different interpolation and curve fitting methods on various datasets, comparing their accuracy and suitability for specific applications.</P>
+        <h4>Technologies used:</h4>
+        <p>MATLAB</p>
+        <li><h4>Social Networking Platform</h4></li>
+        <P>A social networking platform for young adults and professionals to expand their network and build relationships. Key features include profile creation, connections, content sharing, groups, messaging, and events. Built with ReactJS, NodeJS, and MongoDB. MVP expected in 6 months, budget $10,000. Team of 5. Success measured by active users, engagement, and satisfaction</P>
+        <h4>Technologies used:</h4>
+        <p>ReactJS,AngularJS,Python,Java,Git,PHP</p>
+</div>
+</div>
+<!--Skills-->
+<div>
+    <u><h3>Technical Skills</h3></u>
+    <ul>
+        <li>Operating System-window 7</li>
+        <li>Microsoft Office- Word,Excel,Powerpoint</li>
+        <li>Typing speed-30 wpm</li>
+    </ul>
+</div>
+<!--personal skills-->
+<div>
+    <u><h3>Personal skills</h3></u>
+    <ul>
+        <li>Effective communication</li>
+        <li>Punctual and Disciplined</li>
+        <li>Time Management</li>
+    </ul>
+</div>
+<!--Personal Info-->
+<div class="Personal Info">
+<u><h3>Personal Info</h3></u>
+    <table>
+        <tr>
+            <td>Father's Name :</td>
+            <td>Gajjela Devaraju</td>
+        </tr>
+        <tr>
+            <td>Mother's Name :</td>
+            <td>Gajjela Devaraju</td>
+        </tr>
+        <tr>
+            <td>Date of Birth :</td>
+            <td>11-11-1111</td>
+        </tr>
+        <tr>
+            <td>Language Known :</td>
+            <td>English,Telugu & Hindi</td>
+        </tr>
+        <tr>
+            <td>Interests :</td>
+            <td>Chess,Books,Browsing</td>
+        </tr>
+    </table>
+</div>
+<!--Declaration-->
+<div class="Declaration">
+    <u><h3>Declaration</h3></u>
+    <P>I hereby declare that the information funished above is true to the best of my knowledge.</P>
+</div>
+      <p>Place: Hyderabad<br>
+         Date :         <br>
+</main>
 </body>
 </html>
