--- a/Resume.html
+++ b/Resume.html
@@ -33,6 +33,7 @@
 <!--Educational Qualifications-->
 <div class="Education">
     <u><h3>Education Qualifications:</h3></u>
+    <!--set table border,color,padding-->
     <style>
         table, th, td{
             border: 1px  solid black;
