--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Document</title>
-</head>
-<body>
-    heloooooo
-</body>
+<html>
+    <head>
+        <tittle>document</tittle>
+    </head>
+    <body>
+        hello
+    </body>
 </html>
