--- a/Resume.html
+++ b/Resume.html
@@ -3,22 +3,26 @@
 <head>
     <title>Resume</title>
 </head>
-<body>
+<body style="background-color: antiquewhite;">
     <center>
         <u><h1>RESUME</h1></u>
     </center>
     <!--i have to change this-->
     <main class=""resume">
     <!--header-->
+    <a href="" style="Float:left;">Resume</a>
+    <a href="" download style="float:right;">Click To Download</a>
     <header>
         <table style="width: 100%;">
             <tr style="width: 100%">
                 <td style="width: 80%;">
     <h2>Gajjela Anusha</h2>
-       <p>3-333/3,Jangaon,Kamaredy,<br>Hyderabad,Telangana-503125.</p>
+       <Address>3-333/3,Hyderabad <br> Telangana - 503125.</Address>
+       <span><i class="fa-solid fa-phone" ></i></i><strong>Ph No:</strong>+91 9999999999</span<br><br>
+       <span><i class="fa-solid fa-envelope"></i></i><strong>E-mail:</strong>ann****@gmail.com</span>
     </td>
     <td style="width: 20%;">
-<img src="https://thumbs.dreamstime.com/b/passport-photo-serious-african-american-young-adult-woman-isolated-white-background-cut-out-239195383.jpg"
+<img src="https://www.protiviti.com/sites/default/files/styles/is_hero_portrait/public/2022-12/Vijetha_Mohan.jpg?h=f315e6e8&itok=moFEk31W"
      alt="resume_image" height="150" width="150">
 </td>
 </tr>
@@ -141,7 +145,13 @@
     <P>I hereby declare that the information funished above is true to the best of my knowledge.</P>
 </div>
       <p>Place: Hyderabad<br>
-         Date :         <br>
+         Date :         
+         <style>
+            h5{
+                text-align: right;
+            }
+         </style></p>
+      <h5>Anusha Gajjela</h5>
 </main>
 </body>
 </html>
