--- a/Everything.html
+++ b/Everything.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://slp-statics.astockcdn.net/static_assets/staging/24winter/home/curated-collections/card-2.jpg" type="image/x-icon">
     <title>complete Data(practice) of HTML</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 </head>
 <body>
     <!--Headings and paragraph-->
@@ -21,6 +23,9 @@
     <a href="mailto:123@gmail.com" target="_blank">Mail Us</a><br>       <!--email address-->
     <a href="tel: 123456789" target="_blank">Call Us</a><br>             <!--tell number-->
     <a href="" target="_blank">To Download</a><br>                       <!--Download option-->
+    <br>
+    <i class="fa-solid fa-envelope"></i></i><strong> E-mail:</strong>an****@gmail.com <br>       <!--email/phone symbols-->
+    <i class="fa-solid fa-phone"></i></i><strong> Ph no.:</strong>43****05 <br>
     <br>
     <h3> Basic Form</h3>
     Name : <input type ="text"><br>                                      <!--name box-->
