--- a/Resume.html
+++ b/Resume.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://slp-statics.astockcdn.net/static_assets/staging/24winter/home/curated-collections/card-2.jpg" type="image/x-icon">
     <title>Resume</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />+++++++++++++
 </head>
 <body style="background-color: antiquewhite;">
     <center>
@@ -18,8 +24,8 @@
                 <td style="width: 80%;">
     <h2>Gajjela Anusha</h2>
        <Address>3-333/3,Hyderabad <br> Telangana - 503125.</Address>
-       <span><i class="fa-solid fa-phone" ></i></i><strong>Ph No:</strong>+91 9999999999</span<br><br>
-       <span><i class="fa-solid fa-envelope"></i></i><strong>E-mail:</strong>ann****@gmail.com</span>
+       <span><i class="fa-solid fa-phone" ></i></i> <strong>Ph No:</strong>+91 9999999999</span<br><br>
+       <span><i class="fa-solid fa-envelope"></i></i> <strong>E-mail:</strong>ann****@gmail.com</span>
     </td>
     <td style="width: 20%;">
 <img src="https://www.protiviti.com/sites/default/files/styles/is_hero_portrait/public/2022-12/Vijetha_Mohan.jpg?h=f315e6e8&itok=moFEk31W"
