--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <tittle>document</tittle>
-    </head>
-    <body>
-        hello
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Table of Contents</h1>
+    <table>
+        <tr>
+            <th>S.No</th>
+            <th>Name</th>
+            <th>Link</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>simple</td>
+            <td><button><a href="./Simple.html">click</a></button></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>w3c</td>
+            <td><button><a href="./w3c.html">click</a></button></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Resume</td>
+            <td><button><a href="./Resume.html">click</a></button></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Forms</td>
+            <td><button><a href="./Forms.html"></a></button></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Everything</td>
+            <td><button><a href="./Everything.html"></a></button></td>
+        </tr>
+    </table>
+</body>
 </html>
