--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <tr>
             <td>4</td>
             <td>Forms</td>
-            <td><button><a href="./Forms.html"></a></button></td>
+            <td><button><a href="./Forms.html">click</a></button></td>
         </tr>
         <tr>
             <td>5</td>
             <td>Everything</td>
-            <td><button><a href="./Everything.html"></a></button></td>
+            <td><button><a href="./Everything.html">click</a></button></td>
         </tr>
     </table>
 </body>
