Table of content

--- a/HTML/Everything.html
+++ b/HTML/Everything.html
@@ -15,7 +15,7 @@
     <h4>Hello Anusha</h4>
     <h5>Heloo Anusha</h5>
     <!--This title tag is called as tooltip.title is used to get a name in website when hovered mouse over it-->
-    <h6>title="Happy">Gjjela Anusha</h6>
+    <h6>title="Happy"Gjjela Anusha</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quam blanditiis debitis ex voluptates, cupiditate omnis maiores, iure consequatur quibusdam iste aut? Exercitationem eius aspernatur voluptates, aliquid culpa quos veritatis tempore reiciendis eaque obcaecati quam officia harum nulla praesentium ab, expedita rem adipisci animi porro laboriosam nemo sed? Dolores, optio.</p>
     <!--All headings differ by font-size and bold, everything heading comes in new line as heading elements are block element-->  
     <!--Anchor and Image--> 
