--- a/HTML/Forms.html
+++ b/HTML/Forms.html
@@ -71,13 +71,13 @@
                         </tr>
                         <tr>
                             <td>Marital Status : <select name id>
-                                    <option value>--Select--</option>
+                                    <option value>---Select---</option>
                                     <option value>Married</option>
                                     <option value>UnMarried</option>
                                 </select>
                             </td>
                             <td>Category : <Select name id>
-                                <option value>--Select--</option>
+                                <option value>---Select---</option>
                                 <option value>Category</option>
                                 </Select>
                             </td>
@@ -101,7 +101,7 @@
                                 <label for="Ex-ser">Yes</label>
                             </td>
                             <td>Religion : <select name id>
-                                    <option value>--Select--</option>
+                                    <option value>---Select---</option>
                                     <option value>Hindu</option>
                                     <option value>Muslim</option>
                                     <option value>Others</option>
@@ -117,7 +117,7 @@
                         </tr>
                         <tr>
                             <td>State : <select name id>
-                                <option>--Select--</option>
+                                <option>---Select---</option>
                                 <option>Andhra pradhesh</option>
                                 <option>Telangana</option>
                                 <option>Tamilnadu</option>
@@ -142,7 +142,7 @@
                                 <option value>FullStack</option>
                             </select>
                             <select name id>
-                                   <option value>--Select--</option>
+                                   <option value>---Select---</option>
                                    <option value>Java</option>
                                    <option value>Python</option>
                                    <option value>Dot Net</option>
@@ -153,7 +153,7 @@
                             <td>Highest Educational Qualification* : </td>
                             <td>
                                 <select name id>
-                                         <option>--Select--</option>
+                                         <option>---Select---</option>
                                          <option>MBA/MCA</option>
                                          <option>Post Graduation</option>
                                          <option>Graduation</option>
