--- a/HTML/Resume.html
+++ b/HTML/Resume.html
@@ -16,7 +16,6 @@
     <!--i have to change this-->
     <main class=""resume">
     <!--header-->
-    <a href="" style="Float:left;">Resume</a>
     <a href="" download style="float:right;">Click To Download</a>
     <header>
         <table style="width: 100%;">
@@ -24,8 +23,8 @@
                 <td style="width: 80%;">
     <h2>Gajjela Anusha</h2>
        <Address>3-333/3,Hyderabad <br> Telangana - 503125.</Address>
-       <span><i class="fa-solid fa-phone" ></i></i> <strong>Ph No:</strong>+91 9999999999</span<br><br>
-       <span><i class="fa-solid fa-envelope"></i></i> <strong>E-mail:</strong>ann****@gmail.com</span>
+       <span><i class="fa-solid fa-phone" ></i></i> +91 9999999999</span<br><br>
+       <span><i class="fa-solid fa-envelope"></i></i> ann****@gmail.com</span>
     </td>
     <td style="width: 20%;">
 <img src="https://www.protiviti.com/sites/default/files/styles/is_hero_portrait/public/2022-12/Vijetha_Mohan.jpg?h=f315e6e8&itok=moFEk31W"
@@ -37,7 +36,7 @@
 <hr>
 <!--Career Objective-->
 <div class=" Career Objective">
-    <u><h3>Career Objective</h3></u>
+    <u><h3>Career Objective: </h3></u>
 <p>To secure a position as a public relations/marketing professional in order to utilize my administrative, marketing, and interpersonal skills with accuracy and efficiency while maintaining a motivated, productive, and goal oriented environment for the entire professional team on board while maintaining extensive customer loyalty.</p>
 </div>
 <!--Educational Qualifications-->
@@ -103,7 +102,7 @@
 </div>
 <!--Skills-->
 <div>
-    <u><h3>Technical Skills</h3></u>
+    <u><h3>Technical Skills: </h3></u>
     <ul>
         <li>Operating System-window 7</li>
         <li>Microsoft Office- Word,Excel,Powerpoint</li>
@@ -112,7 +111,7 @@
 </div>
 <!--personal skills-->
 <div>
-    <u><h3>Personal skills</h3></u>
+    <u><h3>Personal skills: </h3></u>
     <ul>
         <li>Effective communication</li>
         <li>Punctual and Disciplined</li>
@@ -121,7 +120,7 @@
 </div>
 <!--Personal Info-->
 <div class="Personal Info">
-<u><h3>Personal Info</h3></u>
+<u><h3>Personal Info: </h3></u>
     <table>
         <tr>
             <td>Father's Name :</td>
@@ -147,7 +146,7 @@
 </div>
 <!--Declaration-->
 <div class="Declaration">
-    <u><h3>Declaration</h3></u>
+    <u><h3>Declaration: </h3></u>
     <P>I hereby declare that the information funished above is true to the best of my knowledge.</P>
 </div>
       <p>Place: Hyderabad<br>
