--- a/HTML/Simple.html
+++ b/HTML/Simple.html
@@ -12,5 +12,7 @@
     <h4>Good Morning🦋</h4>
     <h5>Good Morning🤗</h5>
     <h6>Good Morning❤️</h6>
+  <h7>Good Morning👌</h7>
+  <p>Good Morning💕</p>
 </body>
 </html>
