--- a/HTML/w3c.html
+++ b/HTML/w3c.html
@@ -233,6 +233,7 @@
         <p>Load on the first Web server (info.cern.ch) 1000 times what it has 
            been 3 years earlier.
         </p>
+        <img src="https://www.w3.org/History/1994-plot/slide.gif" alt="Over June '91 to June 94, stead">
         <dt>July</dt>
         <dd>MIT/CERN agreement to start W3 Organisation is announced by Bangemann 
             in Boston. <a href="https://news.mit.edu/1994/lcs-1019">MIT press release</a>. Reports in Wall Street 
