--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main page of Index</title>
     <link rel="stylesheet" href="./Index.css">
 </head>
 <body>
@@ -12,35 +12,40 @@
         <!-- But keeping styling like this is not best practise code should be as much less as possible. here we gave both id and class same background styling with different color
         so its not the correct process ..either give styling to class or give to id if giving same attribute like (background-color) means repetition is not correct. smae code should not be repeated -->
 
-        <tr class="col col2" id="th">              <!--class name is used to use in css and it uses to seperate color-->
+        <tr id="th">              <!--class name is used to use in css and it uses to seperate color-->
             <th>S.No</th>
             <th>Name</th>
             <th>Link</th>
         </tr>
-        <tr class="col">                           <!--class name is  col-->
+        <tr class="ser">                          
             <td>1</td>
-            <td>simple</td>
-            <td><button><a href="./Simple.html">click</a></button></td>
+            <td>My simple Project</td>
+            <th><button><a href="./Simple.html" target="_blank">click</a></button></th>
         </tr>
-        <tr class="col">                           <!--class name is col-->
+        <tr class="ser">                           
             <td>2</td>
-            <td>w3c</td>
-            <td><button><a href="./w3c.html">click</a></button></td>
+            <td>W3C First Project</td>
+            <th><button><a href="./w3c.html" target="_blank">click</a></button></th>
         </tr>
-        <tr >
+        <tr class="ser">
             <td>3</td>                             <!-- here class name is not given so that it takes to be row span -->
-            <td>Resume</td>
-            <td><button><a href="./Resume.html">click</a></button></td>
+            <td> My Resume</td>
+            <th><button><a href="./Resume.html" target="_blank">click</a></button></th>
         </tr>
-        <tr class="col">                           <!--class name is col-->
+        <tr class="ser">                           
             <td>4</td>
-            <td>Forms</td>
-            <td><button><a href="./Forms.html">click</a></button></td>
+            <td>My Forms</td>
+            <th><button><a href="./Forms.html" target="_blank">click</a></button></th>
         </tr>
-        <tr class="col">                           <!--class name is col-->
+        <tr class="ser2">                           
             <td>5</td>
-            <td>Everything</td>
-            <td><button><a href="./Everything.html">click   </a></button></td>
+            <td>Everything Basics of HTML</td>
+            <th><button><a href="./Everything.html" target="_blank">click   </a></button></th>
+        </tr>
+        <tr class="ser2">                           
+            <td>6</td>
+            <td>Index page With Both In-Line and Internal CSS Styling</td>
+            <th><button><a href="./Index.html" target="_blank">click </a></button></th>
         </tr>
     </table>
 </body>
