--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
         <tr class="ser">                          
             <td>1</td>
             <td>My simple Project</td>
-            <th><button><a href="./Simple.html" target="_blank">click</a></button></th>
+            <th><button><a href="./HTML/Simple.html" target="_blank">click</a></button></th>
         </tr>
         <tr class="ser">                           
             <td>2</td>
             <td>W3C First Project</td>
-            <th><button><a href="./w3c.html" target="_blank">click</a></button></th>
+            <th><button><a href="./HTML/w3c.html" target="_blank">click</a></button></th>
         </tr>
         <tr class="ser">
             <td>3</td>                             <!-- here class name is not given so that it takes to be row span -->
             <td> My Resume</td>
-            <th><button><a href="./Resume.html" target="_blank">click</a></button></th>
+            <th><button><a href="./HTML/Resume.html" target="_blank">click</a></button></th>
         </tr>
         <tr class="ser">                           
             <td>4</td>
             <td>My Forms</td>
-            <th><button><a href="./Forms.html" target="_blank">click</a></button></th>
+            <th><button><a href="./HTML/Forms.html" target="_blank">click</a></button></th>
         </tr>
         <tr class="ser2">                           
             <td>5</td>
             <td>Everything Basics of HTML</td>
-            <th><button><a href="./Everything.html" target="_blank">click   </a></button></th>
+            <th><button><a href="./HTML/Everything.html" target="_blank">click   </a></button></th>
         </tr>
         <tr class="ser2">                           
             <td>6</td>
