--- a/JavaScript/bg_changer/index.html
+++ b/JavaScript/bg_changer/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background Changer</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 <link rel="manifest" href="/site.webmanifest">
+<link rel="icon" href="fav2.png">
 
 </head>
 <body>
@@ -19,7 +21,9 @@
         </div>
         <button id="btn" onclick="change2()">Click</button>
         <button onclick="changeMode()">Change</button>
+        <button class="btn btn-success">Submit</button><br>
+        <i class="bi bi-airplane-engines-fill"></i>
     </div>
-    <script src="./index.html"></script>
+   <script src="script.js"></script>
 </body>
 </html>
