Traffic Light Animmation

--- a/HTML/Everything.html
+++ b/HTML/Everything.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <!--Headings and paragraph-->
-    <h1>Hello Anusha</h1>
-    <h2>Heloo Anusha</h2>
-    <h3>Hello Anusha</h3>
-    <h4>Hello Anusha</h4>
-    <h5>Heloo Anusha</h5>
+    <h1>Hello World</h1>
+    <h2>Heloo World</h2>
+    <h3>Hello World</h3>
+    <h4>Hello World</h4>
+    <h5>Heloo World</h5>
     <!--This title tag is called as tooltip.title is used to get a name in website when hovered mouse over it-->
     <h6>title="Happy"Gjjela Anusha</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quam blanditiis debitis ex voluptates, cupiditate omnis maiores, iure consequatur quibusdam iste aut? Exercitationem eius aspernatur voluptates, aliquid culpa quos veritatis tempore reiciendis eaque obcaecati quam officia harum nulla praesentium ab, expedita rem adipisci animi porro laboriosam nemo sed? Dolores, optio.</p>
